feat(rasterize): basic server implementation
